# pyzmq-perf

./: LICENSE  environment.yml  setup.py
iperf/scripts/: common.sh  generate_report.sh  node_login.sh  node_node.sh  numa_node_node.sh
scripts/: analyze_results.ipynb  iperf_client.sh  iperf_client_fancy.sh  iperf_server.sh
zmq/python/: .env.example  .gitignore  README.md  plot_config_example.yaml  pyproject.toml
zmq/python/scripts/: node_node.sh
zmq/python/src/hpc_streaming_skeletons/: __init__.py  callbacks.py  coordinator.py  models.py  plot.py  server.py  settings.py  utils.py  validators.py  worker.py
zmq_perf_als832/: bufsize.py  client.py  config_model.py  server.py
