[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpc-streaming-skeletons"
version = "0.1.0"
description = "Python ZeroMQ Streaming Skeleton for Throughput Benchmarking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyzmq>=27.0.0", "pydantic"]
