[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpc-streaming-skeletons"
version = "0.1.0"
description = "Python ZeroMQ Streaming Skeleton for Throughput Benchmarking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=27.0.0",
    "typer>=0.16.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
]

[project.scripts]
pyzmq-bench = "hpc_streaming_skeletons:app"
pyzmq-plot = "hpc_streaming_skeletons.plot:main"
